--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #99738E;
+    background-image: url('images/9.png');
+    background-size: 100%;
     color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
@@ -106,6 +107,10 @@ body {
   }
 
   .about-me {
+    -moz-box-shadow: 0 0 5px #F64C72;
+    -webkit-box-shadow: 0 0 5px #F64C72;
+    box-shadow: 0px 0px 50px #F64C72;
+    border: 3px solid #F64C72;
    padding: 20px;
    background-color: #F64C72;
    border-radius: 10px;
@@ -140,15 +145,27 @@ body {
     column-gap:  10px;
   }
   .fot2 {
+    -moz-box-shadow: 0 0 5px black;
+    -webkit-box-shadow: 0 0 5px black;
+    box-shadow: 0px 0px 50px black;
+    border: 1px solid black;
     display: grid;
     grid-template-columns: auto;
   }
   .fot3 {
+    border-radius: 10px;
     width: 300px;
   }
   .gryada {
     display: grid;
     grid-template-columns: 350px auto;
+  }
+
+  .img1 {
+    -moz-box-shadow: 0 0 5px #fff;
+    -webkit-box-shadow: 0 0 5px #fff;
+    box-shadow: 0px 0px 50px #fff;
+    border: 3px solid white;
   }
   @media (max-width: 600px) {
     nav {
